--- a/Client/src/app/main/content/calender-view/calender-view.component.html
+++ b/Client/src/app/main/content/calender-view/calender-view.component.html
@@ -143,6 +143,7 @@
           <!--<template #dayView></template>-->
         <app-day-track-view
         [viewDate]="viewDate"
+        [calendar]="this"
         [events]="events"
         [resourceSchedules]="roomEvents"
         [refresh]="refresh"
