--- a/Client/src/app/main/content/day-view/day-view.component.css
+++ b/Client/src/app/main/content/day-view/day-view.component.css
@@ -17,3 +17,11 @@
 .track-day>h1{
   text-align: center;
 }
+
+#selecttime {
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+  child-align: middle;
+}
