--- a/Client/src/angular-calendar.css
+++ b/Client/src/angular-calendar.css
@@ -2,6 +2,8 @@
   background-color: gray !important;
 }
 
+.odd-cell {background-color: pink !important;}
+
 .cal-month-view .cal-header {
   text-align: center;
   font-weight: bolder; }
