--- a/Client/src/app/main/content/calender-view/summery-cards/summery-cards.component.css
+++ b/Client/src/app/main/content/calender-view/summery-cards/summery-cards.component.css
@@ -7,8 +7,8 @@
   background-color: whitesmoke;
 }
 
-.card > .list-group{
-  padding: 0 5px 5px 5px;
+.list-group{
+  padding: 0 0px 0px 0px;
   margin: 0;
 }
 
