add extra symbol and filter for prel booked decisions, selecting booked or prel booked decision will take user to sammanfattning

--- a/Client/src/app/main/sidebar/overview/buttonpanel-overview/buttonpanel-overview.component.html
+++ b/Client/src/app/main/sidebar/overview/buttonpanel-overview/buttonpanel-overview.component.html
@@ -41,7 +41,8 @@
           <a class="dropdown-item" href="#"><input type="checkbox" (change)="akutChecked = !akutChecked; filter('AKUT', akutChecked)" title="Akut"/>&nbsp;Akut</a>
           <a class="dropdown-item" href="#"><input type="checkbox" (change)="elektivChecked = !elektivChecked; filter('Elektiv', elektivChecked)" title="Elektiv"/>&nbsp;Elektiv</a>
           <a class="dropdown-item" href="#"><input type="checkbox" (change)="bokadChecked = !bokadChecked; filter('bokad', bokadChecked)" title="Bokad"/> Bokade</a>
-          <a class="dropdown-item" href="#"><input type="checkbox" (change)="prebokadChecked = !prebokadChecked; filter('prebokad', prebokadChecked)" title="PreBokad"/> Obokade</a>
+          <a class="dropdown-item" href="#"><input type="checkbox" (change)="prebokadChecked = !prebokadChecked; filter('prebokad', prebokadChecked)" title="PreBokad"/> Preliminärbokade</a>
+          <a class="dropdown-item" href="#"><input type="checkbox" (change)="obokadChecked = !obokadChecked; filter('obokad', obokadChecked)" title="Obokad"/> Obokade</a>
 
         </div>
 
