--- a/Client/src/app/main/sidebar/planning/infoheader/infoheader.component.html
+++ b/Client/src/app/main/sidebar/planning/infoheader/infoheader.component.html
@@ -5,8 +5,9 @@
 
       <div class="row">
         <div class="col-md">Namn: {{patient.Namn}}</div>
-        <div class="col-md-2" *ngIf="patient.booking !== null"><span class="glyphicon glyphicon-ok text-right" title="Bokad" style="color: limegreen; float: right; padding-right: 5px"></span> </div>
-        <div class="col-md-2" *ngIf="patient.booking === null"><span class="glyphicon glyphicon-warning-sign text-right" title="Ej fullständig bokning" style="color: orange; float: right; padding-right: 5px"></span> </div>
+        <div class="col-md-2" *ngIf="patient.booking != null && patient.booking.preliminary == false"><span class="glyphicon glyphicon-ok text-right" title="Bokad" style="color: limegreen; float: right; padding-right: 5px"></span> </div>
+        <div class="col-md-2" *ngIf="patient.booking != null && patient.booking.preliminary == true"><span class="glyphicon glyphicon-ok text-right" title="Preliminärbokad" style="color: orange; float: right; padding-right: 5px"></span> </div>
+        <div class="col-md-2" *ngIf="patient.booking === null"><span class="glyphicon glyphicon-warning-sign text-right" title="Ej bokad" style="color: orange; float: right; padding-right: 5px"></span> </div>
 
 
       </div>
