--- a/Client/src/app/main/content/calender-view/summery-cards/summery-cards.component.html
+++ b/Client/src/app/main/content/calender-view/summery-cards/summery-cards.component.html
@@ -1,11 +1,14 @@
 <div class="d-flex">
 <div class="card">
   <div class="card-body">
-    <h5 class="card-title" style="font-size: large; font-weight: bold;">Patientinformation</h5>
+    <h5 class="card-title" style="font-size: large; font-weight: bold;">Patient</h5>
 
     <ul class="list-group">
-      <li class="list-group-item"> Namn: {{patient.Namn}} </li>
-      <li class="list-group-item"> Personnummer: {{patient.Personnummer}} </li>
+      <li class="list-group-item">Namn: {{patient.Namn}} </li>
+      <li class="list-group-item">Personnummer: {{patient.Personnummer}} </li>
+      <li class="list-group-item">ICD10: {{patient.ICD10}} </li>
+      <li class="list-group-item">Senaste Operationsdatum: {{patient.Tid}}</li>
+      <li class="list-group-item">Brådskandegrad: {{urgency}}</li>
     </ul>
   </div>
 
@@ -15,12 +18,60 @@
   <div class="card-body">
     <h5 class="card-title" style="font-size: large; font-weight: bold;">Operation</h5>
     <ul class="list-group">
-      <li class="list-group-item">Huvudåtgärd: {{patient.procedures[0].description}}</li>
-      <li class="list-group-item">ICD10: {{patient.ICD10}} </li>
-      <li class="list-group-item">KVÅ: {{patient.procedures[0]['kvåCode']}} </li>
-      <li class="list-group-item">Förberedelsetid: {{patient.procedures[0].preparationTime}} minuter</li>
-      <li class="list-group-item">Avvecklingstid: {{patient.procedures[0].dismantlingTime}} minuter</li>
+      <li class="list-group-item">Total operationstid: {{patient.totalOperationTime}} minuter</li>
     </ul>
+    <div *ngIf="patient.procedures.length > 0">
+      <h5 class="card-title" style="font-weight: bold;">Huvudåtgärd</h5>
+      <button type="button" class="btn btn-default" data-toggle="collapse" data-target="#mainprocedure">{{patient.procedures[0].description}} <span class="glyphicon glyphicon-chevron-down" style="vertical-align: middle; width: 10px"></span></button>
+      <div id="mainprocedure" class="collapse">
+        <ul class="list-group">
+          <li class="list-group-item">KVÅkod: {{patient.procedures[0]['kvåCode']}}</li>
+          <li class="list-group-item">Förberedelsetid: {{patient.procedures[0].preparationTime}} minuter</li>
+          <li class="list-group-item">Operationstid: {{patient.procedures[0].operationTime}} minuter</li>
+          <li class="list-group-item">Avvecklingstid: {{patient.procedures[0].dismantlingTime}} minuter</li>
+          <li class="list-group-item">Ställtid: {{patient.procedures[0].downTime}} minuter</li>
+        </ul>
+      </div>
+    </div>
+    <div *ngIf="patient.procedures.length > 1">
+      <h5 class="card-title" style="font-weight: bold;">Åtgärd 2</h5>
+      <button type="button" class="btn btn-default" data-toggle="collapse" data-target="#procedure2">{{patient.procedures[1].description}} <span class="glyphicon glyphicon-chevron-down" style="vertical-align: middle; width: 10px"></span></button>
+      <div id="procedure2" class="collapse">
+        <ul class="list-group">
+          <li class="list-group-item">KVÅkod: {{patient.procedures[1]['kvåCode']}}</li>
+          <li class="list-group-item">Förberedelsetid: {{patient.procedures[1].preparationTime}} minuter</li>
+          <li class="list-group-item">Operationstid: {{patient.procedures[1].operationTime}} minuter</li>
+          <li class="list-group-item">Avvecklingstid: {{patient.procedures[1].dismantlingTime}} minuter</li>
+          <li class="list-group-item">Ställtid: {{patient.procedures[1].downTime}} minuter</li>
+        </ul>
+      </div>
+    </div>
+    <div *ngIf="patient.procedures.length > 2">
+      <h5 class="card-title" style="font-weight: bold;">Åtgärd 3</h5>
+      <button type="button" class="btn btn-default" data-toggle="collapse" data-target="#procedure3">{{patient.procedures[2].description}} <span class="glyphicon glyphicon-chevron-down" style="vertical-align: middle; width: 10px"></span></button>
+      <div id="procedure3" class="collapse">
+        <ul class="list-group">
+          <li class="list-group-item">KVÅkod: {{patient.procedures[2]['kvåCode']}}</li>
+          <li class="list-group-item">Förberedelsetid: {{patient.procedures[2].preparationTime}} minuter</li>
+          <li class="list-group-item">Operationstid: {{patient.procedures[2].operationTime}} minuter</li>
+          <li class="list-group-item">Avvecklingstid: {{patient.procedures[2].dismantlingTime}} minuter</li>
+          <li class="list-group-item">Ställtid: {{patient.procedures[2].downTime}} minuter</li>
+        </ul>
+      </div>
+    </div>
+    <div *ngIf="patient.procedures.length > 3">
+      <h5 class="card-title" style="font-weight: bold;">Åtgärd 4</h5>
+      <button type="button" class="btn btn-default" data-toggle="collapse" data-target="#procedure4">{{patient.procedures[3].description}} <span class="glyphicon glyphicon-chevron-down" style="vertical-align: middle; width: 10px"></span></button>
+      <div id="procedure4" class="collapse">
+        <ul class="list-group">
+          <li class="list-group-item">KVÅkod: {{patient.procedures[3]['kvåCode']}}</li>
+          <li class="list-group-item">Förberedelsetid: {{patient.procedures[3].preparationTime}} minuter</li>
+          <li class="list-group-item">Operationstid: {{patient.procedures[3].operationTime}} minuter</li>
+          <li class="list-group-item">Avvecklingstid: {{patient.procedures[3].dismantlingTime}} minuter</li>
+          <li class="list-group-item">Ställtid: {{patient.procedures[3].downTime}} minuter</li>
+        </ul>
+      </div>
+    </div>
   </div>
 
 
@@ -28,13 +79,10 @@
 
 <div class="card">
   <div class="card-body">
-    <h5 class="card-title" style="font-size: large; font-weight: bold;">Information</h5>
+    <h5 class="card-title" style="font-size: large; font-weight: bold;">Bokning</h5>
 
     <ul class="list-group">
       <li class="list-group-item">Bokningsstatus: {{bookingStatus}}</li>
-      <li class="list-group-item">Senaste Operationsdatum: {{patient.Tid}}</li>
-      <li class="list-group-item">Brådskandegrad: {{urgency}}</li>
-      <li class="list-group-item">Operationstid: {{patient.procedures[0].operationTime}} minuter</li>
       <li *ngIf="patient.booking" class="list-group-item">Operationsstart: {{startDate}}</li>
       <li *ngIf="patient.booking" class="list-group-item">Operationsslut: {{endDate}}</li>
       <li *ngIf="patient.booking" class="list-group-item">Operationssal: {{bookedRoomName}}</li>
