--- a/Client/src/app/main/content/calender-view/calender-view.component.html
+++ b/Client/src/app/main/content/calender-view/calender-view.component.html
@@ -50,7 +50,7 @@
       </div>
     </div>
   <div class="col-md-4">
-    <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):'sv' }}</h3>
+    <h3 *ngIf="view !== 'summery'">{{ viewDate | calendarDate:(view + 'ViewTitle'):'sv' }}</h3>
   </div>
   <div class="col-md-4">
     <div class="btn-group">
